src/assets/scss/_array-field.scss
.squished-array-buttons {
  .array-input-field-container {
    .add-button{
      padding-right: 8px;
    }
    .input-items-new {
      .item {
        .action-buttons {
          margin-right: -1px;
        }
      }
    }
  }
}

// New Styles
.entity-value,
.select-all-input {
  .add-button{
    padding-right: 6px;
  }
  .array-input-field-container {
    ul {
      padding-left: 0;
    }
    .add-element-container {
      display: flex;
      flex-direction: row;
      gap: 5px;
      [class*='input-switch-container'] {
        width: 100%;
      }
      .chaise-btn {
        height: 30px;
      }
    }
    .input-items-new {
      width: 100%;
      margin-bottom: 2px;
      display: flex;
      flex-direction: column;
      gap: 3px;

      &.add-margin-bottom {
        margin-bottom: 10px;
      }
      & *:focus {
        outline: none;
      }
      li {
        list-style: none;
      }
      .item {
        border-radius: 3px;
        min-height: 30px;
        height: auto;
        width: 100%;
        padding-top: 1px;
        padding-bottom: 1px;
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        gap: 5px;
        &:hover {
          box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
        }
        .move-icon {
          display: flex;
          padding-left: 3px;
          & * {
            position: relative;
            top: 50%;
            transform: translateY(-7px);
          }
        }
        .input-box,
        .input-switch {
          border: 2px solid transparent;
          box-shadow: rgba(27, 31, 35, 0.04) 0px 1px 0px,
            rgba(255, 255, 255, 0.25) 0px 1px 0px inset;
          &:focus {
            outline: none;
          }
        }
        button:not(.chaise-btn.chaise-btn-primary) {
          height: 100%;
          width: auto;
        }
        .action-buttons {
          height: 100%;
          & * {
            margin-right: 7px;
            font-size: medium;
          }
        }
        .item-input {
          width: 100%;
          padding-right: 5px;
        }
        &.date,
        &.timestamp,
        &.boolean {
          .item-input {
            padding-right: 4px;
          }
        }
        &.timestamp {
          .item-input .input-switch-datetime .chaise-btn-group.translateY {
            transform: translateY(18px);
          }
        }
        [class*='input-switch-container'] {
          flex: 1 1 1px;
        }
        [class$='array_date'] {
          flex: 1 1 1px;
        }
        [class$='array_timestamp'] {
          flex: 1 1 1px;
        }
      }
    }
    .timestamp {
      display: flex;
      align-items: center;
      position: relative;
      padding-bottom: 30px !important;
      .move-icon * {
        transform: translateX(-2px) !important;
      }
      .chaise-btn-group {
        position: absolute;
      }
    }
  }
}

.select-all-row{
  .array-input-field-container .item.timestamp {
    .item-input .input-switch-datetime .chaise-btn-group.translateY {
      transform: translateY(38px) !important;
    }
  }
}

